Changed getFirst method to get for older JDK